src/test/BadAnnotations2/BadAnnotations2.expected
error: BadAnnotations2.panda:6:5: annotation '@class' is not supported on fields
error: BadAnnotations2.panda:6:5: annotation '@external' is not supported on fields
error: BadAnnotations2.panda:6:5: annotation '@math(overflow)' is not supported on fields
error: BadAnnotations2.panda:6:5: annotation '@safeReturn' is not supported on fields
error: BadAnnotations2.panda:10:5: annotation '@override' is not supported on fields
error: BadAnnotations2.panda:10:5: annotation '@self' is not supported on fields
error: BadAnnotations2.panda:13:5: annotation '@limited' is not supported on fields
error: BadAnnotations2.panda:16:5: annotation '@abstract' is not supported on fields
error: BadAnnotations2.panda:21:5: interface methods are implicitly abstract, '@abstract' annotation is redundant
error: BadAnnotations2.panda:24:5: annotation '@external' is not supported on interface methods
error: BadAnnotations2.panda:27:5: interface methods must be public
error: BadAnnotations2.panda:30:5: interface methods must be public
12 errors
