src/test/BadAnnotations2/BadAnnotations2.panda
class Foo {
    @class
    @external
    @math(overflow)
    @safeReturn
    var a := 5

    @self
    @override
    var b := 12

    @limited
    var c := 42

    @abstract
    var d := 123
}

interface Bar {
    @abstract
    method foo()

    @external
    method bar()

    @private
    method baz()

    @protected
    method bang()
}